--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -870,6 +870,7 @@
                 <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
                 <action android:name="android.location.PROVIDERS_CHANGED" />
                 <action android:name="com.android.sync.SYNC_CONN_STATUS_CHANGED" />
+                <action android:name="com.htc.net.wimax.WIMAX_ENABLED_CHANGED" />
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/appwidget_info" />
         </receiver>
