--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -872,9 +872,17 @@
                 <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
                 <action android:name="android.location.PROVIDERS_CHANGED" />
                 <action android:name="com.android.sync.SYNC_CONN_STATUS_CHANGED" />
-                <action android:name="com.htc.net.wimax.WIMAX_ENABLED_CHANGED" />
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/appwidget_info" />
+        </receiver>
+		<!-- Wimax standalone widget -->
+        <receiver android:name=".widget.WimaxWidgetProvider"
+                android:label="@string/wimax_gadget_title">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.htc.net.wimax.WIMAX_ENABLED_CHANGED" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/wimax_widget_info" />
         </receiver>
     </application>
 </manifest>
