--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -881,6 +881,7 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.htc.net.wimax.WIMAX_ENABLED_CHANGED" />
+                <action android:name="com.evervolv.widget.WIMAX_CLICKED"/>
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/wimax_widget_info" />
         </receiver>
