Fix widget bug - milesje
Add Bluetooth widget.

Change-Id: Iec881b2b46194f16e0cb0bd2b89050ec0ea7c066

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -895,5 +895,15 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/wifi_widget_info" />
         </receiver>
+		<!-- Bluetooth standalone widget -->
+        <receiver android:name=".widget.BluetoothWidgetProvider"
+                android:label="@string/bluetooth_gadget_title">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
+                <action android:name="com.evervolv.widget.BLUETOOTH_CLICKED"/>
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/bluetooth_widget_info" />
+        </receiver>
     </application>
 </manifest>
