--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -902,8 +902,19 @@
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
                 <action android:name="com.evervolv.widget.BLUETOOTH_CLICKED"/>
+                <action android:name="android.location.PROVIDERS_CHANGED" />
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/bluetooth_widget_info" />
+        </receiver>
+		<!-- GPS standalone widget -->
+        <receiver android:name=".widget.GpsWidgetProvider"
+                android:label="@string/gps_gadget_title">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.evervolv.widget.GPS_CLICKED"/>
+                <action android:name="android.location.PROVIDERS_CHANGED" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/gps_widget_info" />
         </receiver>
     </application>
 </manifest>
