Add brightness widget support. Not 100%, but wanted to release with what we had.
Change-Id: I209936fac6d2bede8d5bbe99bd6a487623f15e67

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -926,5 +926,14 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/sync_widget_info" />
         </receiver>
+        <!-- Brightness standalone widget -->
+        <receiver android:name=".widget.BrightnessWidgetProvider"
+                android:label="@string/brightness_gadget_title">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.evervolv.widget.BRIGHTNESS_CLICKED"/>
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/brightness_widget_info" />
+        </receiver>
     </application>
 </manifest>
