Widgets: Add Screen rotation toggle widget to standalone widgets.
Change-Id: I8bfd9ec92fe1ab182ac7d9ab609e5f862f2f68ce

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -938,5 +938,15 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_info" />
         </receiver>
+        	<!-- Brightness standalone widget -->
+        <receiver android:name=".widget.OrientationWidgetProvider"
+                android:label="@string/orientation_gadget_title">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.evervolv.widget.ORIENTATION_CLICKED"/>
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_info" />
+        </receiver>
+
     </application>
 </manifest>
