Add airplane mode standalone widget.
Change-Id: Ic0be7e0c68edb686d9174d5272232db3a2da1a36

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -938,12 +938,23 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_info" />
         </receiver>
-        	<!-- Brightness standalone widget -->
+        	<!-- Orientation standalone widget -->
         <receiver android:name=".widget.OrientationWidgetProvider"
                 android:label="@string/orientation_gadget_title">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.evervolv.widget.ORIENTATION_CLICKED"/>
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_info" />
+        </receiver>
+        	<!-- Airplane Mode standalone widget -->
+        <receiver android:name=".widget.AirplaneModeWidgetProvider"
+                android:label="@string/airplanemode_gadget_title">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.evervolv.widget.AIRPLANEMODE_CLICKED"/>
+                <action android:name="android.intent.action.AIRPLANE_MODE"/>
+
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_info" />
         </receiver>
