Widgets: Add mobile data toggle widget!
Change-Id: I42d68f6085aee8bb0a3719775a0c2878aeb2f01a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -970,5 +970,14 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_info" />
         </receiver>
+        	<!-- Mobile data toggle standalone widget -->
+        <receiver android:name=".widget.MobileDataWidgetProvider"
+                android:label="@string/mobile_data_gadget_title">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.evervolv.widget.MOBILE_DATA_CLICKED"/>
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_info" />
+        </receiver>
     </application>
 </manifest>
